--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
   "devDependencies": {
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
