--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "boilerplate-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --max-warnings=0 src/ "
   },
   "dependencies": {
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*": ["yarn lint --fix"]
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
@@ -23,6 +31,8 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.2.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "typescript": "^4.1.3"
   }
 }
