--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "baseUrl": ".",
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
